# Hw_nfactorial_8

./: pyproject.toml  sql_app.db
app/: flowers_repository.py  main.py  purchases_repository.py  users_repository.py
